# CoomerDL

./: .gitignore  AI_AGENT_WORKFLOW.md  COMPLETION_INSTALLATION.md  DEPLOYMENT_GCP.md  Dockerfile  Dockerfile.webapp  IMPLEMENTATION_SUMMARY.md  INSTALL.md  MANIFEST.in  MCP_SETUP_GUIDE.md  QUICKSTART.md  README.md  ROADMAP.md  ROADMAP_SUMMARY.md  TASKS.md  install.py  install_windows.bat  pyproject.toml  requirements.txt  setup.py  test-docker-deployment.sh  validate_install.py
.github/agents/: QUICK_START_PROMPTING.md
.github/copilot/: mcp.json
.github/mcp/: README.md
.github/workflows/: release.yml
.idx/: dev.nix
app/: settings_window.py  sidebar_app.py  ui.py
app/components/settings_tabs/: __init__.py  filters_settings.py  network_settings.py
app/dialogs/: __init__.py  queue_dialog.py
app/models/: __init__.py
app/utils/: converter.py  ffmpeg_check.py
app/window/: __init__.py  action_panel.py  menu_bar.py
app/window/pages/: converter.py  history.py  home.py  queue.py  settings.py
docs/: README.md
docs/agents/: README.md
docs/archive/: README.md
docs/deployment/: README.md
docs/user/: README.md
downloader/: base.py  bunkr.py  downloader.py  erome.py  factory.py  gallery.py  history.py  jpg5.py  queue.py  simpcity.py  throttle.py  ytdlp_adapter.py
tests/: conftest.py  test_base_downloader.py  test_download_queue.py  test_factory.py  test_gallery_policies.py  test_job_queue.py  test_scheduler.py
